MAT-15948, ikke bruke utgåtte java-plugin-avhengigheter